# bookstore-stock-search

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  start.sh
.github/workflows/: fly-deploy.yml
app/: config.py  main.py
app/api/routes/: health.py  inventory.py  search.py
app/cache/: memory.py
app/models/: book.py  inventory.py
app/providers/: aladin.py  base.py  kyobo.py  yes24.py  youngpoong.py
app/services/: book_search.py  inventory_aggregator.py
app/templates/: base.html  index.html  results.html
mobile/android/: settings.gradle.kts
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/com/offbooksearch/app/: MainActivity.kt
mobile/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
mobile/android/app/src/main/res/layout/: activity_main.xml
mobile/android/app/src/main/res/values/: strings.xml  themes.xml
tests/: conftest.py  test_book_search.py
tests/test_providers/: test_aladin.py  test_kyobo.py  test_youngpoong.py
